fix vertical overflow when adding books

--- a/style.css
+++ b/style.css
@@ -59,14 +59,14 @@ body {
 /*Cards*/
 #card-container {
   background-color: #d6d3d1;
-  min-height: 100vh;
   display: grid;
   justify-content: center;
-  grid-template-areas: 2/ 1 / 3/ 2;
   grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
-  grid-template-rows: repeat(auto-fit, 30vh);
-  padding: 2rem 8rem;
+  grid-template-rows: repeat(auto-fit, minmax(200px, 1fr));
+  padding: 2rem 2rem;
+  min-height: 100vh;
 }
+
 .card-title {
   font-family: "Courier New", Courier, monospace;
   font-size: larger;
@@ -84,6 +84,7 @@ body {
     rgba(0, 0, 0, 0.3) 0px 1px 3px -1px;
   margin: 1rem;
   max-width: 400px;
+  max-height: 25vh;
 }
 
 .title,
@@ -126,13 +127,11 @@ body {
 
 /*Sidebar*/
 .side-bar {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
   position: relative;
   grid-template-areas: 1 / 1 / 2 / 2;
   background-color: #d6d3d1;
 }
+
 [data-modal-target] {
   color: #f8fafc;
   background-color: #292524;
@@ -146,6 +145,19 @@ body {
 }
 
 .side-bar h2 {
+  color: #f8fafc;
   margin: 0;
   padding: 1rem;
+}
+
+.sidebar-content {
+  border-radius: 20px;
+  background-color: #44403c;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 2rem;
+
+  min-width: 200px;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
 }
